--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><span class="general">General</span></li>
                         <li><span class="list-dashbord"><a href="#">dashbord</a></span></li>
-                        <li><a href="#">products</a></li>
+                        <li><a href="#">home</a></li>
                         <li><a href="#">category</a></li>
                         <li><a href="#">inventotry</a></li>
                         <li><a href="#">orders</a></li>
