--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="#">home</a></li>
                         <li><a href="#">category</a></li>
                         <li><a href="#">inventotry</a></li>
-                        <li><a href="#">orders</a></li>
+                        <li><a href="#">order</a></li>
                         <li><a href="#">purchases</a></li>
                         <li><a href="#">attributes</a></li>
                         <li><a href="#">invoices</a></li>
